--- a/fsad-assignment/backend/equipment-management/pom.xml
+++ b/fsad-assignment/backend/equipment-management/pom.xml
@@ -13,11 +13,11 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <groupId>com.auth</groupId>
-    <artifactId>user-authentication</artifactId>
+    <groupId>com.equipment</groupId>
+    <artifactId>equipment-management</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>   <!-- WAS POM → WRONG -->
-    <name>user-authentication</name>
+    <packaging>jar</packaging>
+    <name>equipment-management</name>
 
     <dependencies>
         <dependency>
@@ -62,16 +62,11 @@
             <scope>runtime</scope>
         </dependency>
 
-        <!-- Test -->
+        <!-- Reuse Auth Module -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-test</artifactId>
-            <scope>test</scope>
+            <groupId>com.auth</groupId>
+            <artifactId>user-authentication</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
